--- a/Domination/nbproject/private/private.properties
+++ b/Domination/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Jon_2\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=/home/fox/.netbeans/8.1/build.properties
