--- a/Domination/nbproject/private/private.properties
+++ b/Domination/nbproject/private/private.properties
@@ -1,1 +1,6 @@
-user.properties.file=/home/fox/.netbeans/8.1/build.properties
+compile.on.save=false
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\Matthew\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
