--- a/Domination/nbproject/project.properties
+++ b/Domination/nbproject/project.properties
@@ -1,3 +1,4 @@
+javac.external.vm=false
 #Mon Mar 28 17:19:58 EDT 2016
 jnlp.offline-allowed=false
 javadoc.splitindex=true
@@ -9,7 +10,9 @@ javadoc.author=false
 build.sysclasspath=ignore
 javac.target=1.5
 build.generated.dir=${build.dir}/generated
-run.classpath=${javac.classpath}\:${build.classes.dir}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 jnlp.applet.width=300
 debug.test.classpath=${run.test.classpath}
 file.reference.SwingME.jar=lib/SwingME.jar
@@ -39,7 +42,9 @@ manifest.file=manifest.mf
 test.junit.dir=test\\junit
 javac.source=1.5
 run.jvmargs=
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 build.generated.sources.dir=${build.dir}/generated-sources
 src.src_swing.dir=src_swing
 jnlp.signing=
@@ -54,7 +59,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 src.src.dir=src
 javadoc.additionalparam=
 file.reference.httpmime-4.1.2.jar=libs/httpmime-4.1.2.jar
-javac.classpath=${file.reference.jnlp.jar}\:${file.reference.LobbyClient.jar}\:${file.reference.LobbyServer.jar}\:${file.reference.TranslationTool.jar}\:${file.reference.midletrunner.jar}\:${file.reference.Grasshopper.jar}\:${file.reference.SwingME.jar}\:${file.reference.httpmime-4.1.2.jar}\:${file.reference.httpcore-4.1.2.jar}\:${file.reference.jfreechart-1.0.15.jar}
+javac.classpath=\
+    ${file.reference.jnlp.jar}:\
+    ${file.reference.LobbyClient.jar}:\
+    ${file.reference.LobbyServer.jar}:\
+    ${file.reference.TranslationTool.jar}:\
+    ${file.reference.midletrunner.jar}:\
+    ${file.reference.Grasshopper.jar}:\
+    ${file.reference.SwingME.jar}:\
+    ${file.reference.httpmime-4.1.2.jar}:\
+    ${file.reference.httpcore-4.1.2.jar}:\
+    ${file.reference.jfreechart-1.0.15.jar}
 javadoc.noindex=false
 annotation.processing.enabled.in.editor=false
 javadoc.private=false
@@ -70,7 +85,8 @@ annotation.processing.run.all.processors=true
 excludes=net\\yura\\domination\\android\\**
 application.title=Domination
 jnlp.codebase.type=no.codebase
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 jnlp.applet.height=300
 build.test.results.dir=${build.dir}/test/results
 endorsed.classpath=
