--- a/Domination/nbproject/private/private.properties
+++ b/Domination/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/fox/.netbeans/8.1/build.properties
+user.properties.file=C:\\Users\\Jon_2\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
