--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /Domination/build/
 /Domination/dist/
-/Domination/nbproject/private.properties
+/Domination/nbproject/private/private.properties
+/Domination/nbproject/private/private.xml
+/Domination/nbproject/private/config.properties
