fixed code coverage ignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /Domination/nbproject/private/private.properties
 /Domination/nbproject/private/private.xml
 /Domination/nbproject/private/config.properties
+Domination/.jococoverage/
