fixing more gitignore coverage

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /Domination/nbproject/private/private.xml
 /Domination/nbproject/private/config.properties
 Domination/.jococoverage/
+/Domination/jacoco.*
+/Dominaition/jacocoverage.*
+
